--- a/lp01.md
+++ b/lp01.md
@@ -2,3 +2,5 @@
 
 **Larry** es un niño huérfano que vive con sus tios que lo tratan bastante mal (le hacen usar *internet explorer 6*).
 
+Tiene una cicatriz de un *USB* en la frente y unas *Google Glass* redondas.
+
