--- a/lp01.md
+++ b/lp01.md
@@ -4,3 +4,6 @@
 
 Tiene una cicatriz de un *USB* en la frente y unas *Google Glass* redondas.
 
+Un día, **Larry** se marcha a la escuela de hackers.
+
+ Allí conoce a sus amigos **ROM** y **Versión**
