Agrego párrafo al libro 2

--- a/lp02.md
+++ b/lp02.md
@@ -2,3 +2,6 @@
 
 Tras descubrir un bug en *Matrix*, los ordenadores de la escuela han sido atacados por un *troyano*. 
 
+El atacante fue el malvado **Ballmermont**, que cuando era pequeño atacó a **Larry** haciendole la 
+cicatriz de su frente.
+
