--- a/lp02.md
+++ b/lp02.md
@@ -2,3 +2,5 @@
 
 Tras descubrir un bug en *Matrix*, los ordenadores de la escuela han sido atacados por un *troyano*. 
 
+En el código de **Larry** puede esconderse *malware*.
+
