--- a/lp04.md
+++ b/lp04.md
@@ -2,5 +2,5 @@
 
 Se celebra un hackaton en la escuela y el portatil de **Dig Ory** estalla.
 
-La culpa es del malvado **Ballmermont**
+La culpa es del malvado **Ballmermont** pero no pasa nada.
 
